ingress/main/argocd/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.alexshishin.ru`)
      kind: Rule
      services:
        - name: argocd-server
          namespace: argocd
          port: 443
          scheme: https
          serversTransport: argocd-server-transport
  tls:
    secretName: argocd-tls-secret
